--- a/package.json
+++ b/package.json
@@ -9,8 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-solid-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.3",
+    "axios": "^1.3.5",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-autosuggest": "^10.1.0",
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.10.0",
+    "sass": "^1.60.0",
+    "video.js": "^8.0.4"
   }
 }
