--- a/package.json
+++ b/package.json
@@ -10,16 +10,24 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.5",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-dom": "18.2.0",
+    "react-paginate": "^8.1.5",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "sass": "^1.60.0",
+    "redux": "^4.2.1",
     "video.js": "^8.0.4"
+  },
+  "devDependencies": {
+    "sass": "^1.61.0",
+    "sass-loader": "^13.2.2"
   }
 }
