--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.9.3",
     "axios": "^1.3.5",
+    "firebase": "^8.10.1",
+    "font-awesome": "^4.7.0",
     "next": "13.2.4",
+    "next-firebase-auth": "^0.15.0",
     "react": "18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-dom": "18.2.0",
