--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-autosuggest": "^10.1.0",
     "react-dom": "18.2.0",
     "react-paginate": "^8.1.5",
+    "react-range": "^1.8.14",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
     "redux": "^4.2.1",
